[#862] taking out overflow auto seems to solve the iOS problem.
i'm going to check again.

--- a/client/views/charts/ed-single-chart/ed-single-chart.less
+++ b/client/views/charts/ed-single-chart/ed-single-chart.less
@@ -112,7 +112,6 @@
     overflow-y: scroll;
     li {
       .flexContainer( row; flex-start; stretch; stretch );
-      overflow: auto;
       width: 100%;
       padding-bottom: 1%;
       .edType( heading-XS );
